hackerzy_styles.css
body {
  font-family: "Archivo", sans-serif;
  font-size: 22px;
  background-color: #F8F8F8;
  color: rgb(28,28,28);
  margin: 0;
  padding: 0;
  line-height: 37px;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  transition: background-color 0.3s, color 0.3s;
}

header {
  background: linear-gradient(45deg, #4a0e4e, #0e1a4a);
  color: #fff;
  padding: 60px;
  text-align: center;
  font-size: 2em;
  text-transform: uppercase;
}

header h1 {
  font-family: "Archivo Black", sans-serif;
  letter-spacing: -0.05em;
  font-size: 68px;
  text-transform: uppercase;
  font-style: oblique;
  margin: 0;
  color: #fff;
  text-shadow: 0 0 20px rgba(25, 25, 255, 0.8) !important;
  
}

nav {
  position: relative;
  padding: 10px 0;
  border-bottom: 5px solid transparent;
  background-clip: padding-box;
  transition: background-color 0.3s;
}

.dark-mode nav {
  background-color: #1a1a1a; /* Dark background */
}

nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

nav ul li {
  margin: 0 15px;
}

nav ul li a, nav ul li button {
  color: transparent;
  text-decoration: none;
  font-weight: bold;
  font-size: 1em;
  text-transform: uppercase;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  border: none;
  cursor: pointer;
  padding: 10px 20px;
  transition: color 0.3s;
  position: relative;
}

main {
  flex: 1;
  max-width: 800px;
  margin: 0 auto;
  padding: 40px 70px;
  transition: background-color 0.3s, color 0.3s;
}

h2 {
  font-family: "Archivo Black", sans-serif;
  letter-spacing: -0.05em;
  text-transform: uppercase;
  margin: 50px auto;
  font-size: 3em;
  line-height: 0.8em;
  text-shadow: 0 0 5px rgba(25, 25, 255, 0.3) !important;
}

section {
  margin-bottom: 40px;
  transition: background-color 0.3s, color 0.3s;
}

.resource-section {
  margin-bottom: 30px;
  overflow: hidden;
}

.resource-image {
  width: 300px; /* Adjust width as needed */
  height: auto; /* Maintain aspect ratio */
  float: right;
  margin: 0 0 10px 10px;
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.6s ease-out, transform 0.6s ease-out, filter 0.3s ease-out, transform 0.3s ease-out;

}

.resource-image.appear {
  opacity: 1;
  transform: translateY(0);

}

.resource-image:hover {
  transform: translateY(0) scale(1.3); /* Enlarge by 10% on hover */
}

.cta-button {
  display: inline-block;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  color: #fff;
  padding: 15px 30px;
  font-size: 1em;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
  border: 5px solid #000;
  transition: background-color 0.3s, color 0.3s;
}

.cta-button:hover {
  background: linear-gradient(90deg, #9333ea, #d946ef, #1d4ed8);
  color: #fff;
}

footer {
  background-color: #000;
  color: #fff;
  text-align: center;
  padding: 20px 0;
  margin-top: 40px;
  transition: background-color 0.3s, color 0.3s;
}

.dark-mode {
  background-color: #1A1A1A;
  color: #e0e0e0;
}

.dark-mode header {
  background: linear-gradient(45deg, #0e1a4a, #4a0e4e);
}

.dark-mode nav ul li a, .dark-mode nav ul li button {
  color: transparent;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.dark-mode main, .dark-mode section {
  background-color: #1a1a1a;
  color: #e0e0e0;
}

.toggle-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.toggle-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: .4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: .4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:checked + .slider:before {
  transform: translateX(26px);
}

.slider:after {
  content: '☽';
  position: absolute;
  right: 10px;
  top: 0px;
  font-size: 26px;
}

input:checked + .slider:after {
  content: '☀';
  left: 10px;
  right: auto;
}

/* Light Mode Popup Styles */
.popup {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

.popup-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  color: #000;
}

.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* Link Styles for Main Content and Popup */
a {
  color: transparent;
  text-decoration: none;
  position: relative;
  transition: color 0.3s;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

a::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: -2px;
  left: 0;
  background: linear-gradient(to right, #4a0e4e, #0e1a4a); /* Deep purple to deep blue gradient */
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

a:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

/* Dark Mode Popup Styles */
.dark-mode .popup-content {
  background-color: #333;
  border: 1px solid #555;
  color: #e0e0e0;
}

.dark-mode .close {
  color: #777;
}

.dark-mode .close:hover,
.dark-mode .close:focus {
  color: #fff;
}

.dark-mode a {
  color: transparent;
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.dark-mode a::after {
  background: linear-gradient(to right, #0e1a4a, #4a0e4e); /* Deep blue to deep purple gradient */
}

/* Gradient 1: Hackerzy-Gradient1 */
.hackerzy-gradient1 {
  background: linear-gradient(90deg, #1d4ed8, #9333ea, #d946ef);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Gradient 2: Hackerzy-Gradient2 */
.hackerzy-gradient2 {
  background: linear-gradient(90deg, #06b6d4, #3b82f6, #1d4ed8);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Gradient 3: Hackerzy-Gradient3 */
.hackerzy-gradient3 {
  background: linear-gradient(90deg, #f59e0b, #f97316, #ef4444);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


/* Styles for the popup container */
.popup-container {
  position: fixed;
  bottom: 20px;
  left: 20px;
  width: 300px; /* Adjust width as needed */
  height: auto;
  overflow: hidden;
  background-color: #FFFFFF;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  transition: transform 0.5s ease-in-out;
  transform: translateX(-100%);
}

/* Styles for the popup image */
.popup-image {
  width: 100%;
  height: 100%;
  object-fit: contain; /* Ensures entire image is displayed */
}

